simple page structure

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-<%= yield %>
+    <a href="<%= root_path %>">Home</a>
+    <a href="<%= dash_path %>">Dash</a>
+    <a href="<%= cal_path %>">Cal</a>
+    <a href="<%= growth_path %>">Growth</a>
+
+    <%= yield %>
 
 </body>
 </html>
