adds users and logins to the app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,27 @@
 </head>
 <body>
 
-    <a href="<%= root_path %>">Home</a>
-    <a href="<%= dash_path %>">Dash</a>
-    <a href="<%= cal_path %>">Cal</a>
-    <a href="<%= growth_path %>">Growth</a>
+    <% if notice %>
+        <p class="notice"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+        <p class="alert"><%= alert %></p>
+    <% end %>
+
+    <div class="nav">
+        <a href="<%= root_path %>">Home</a>
+        <a href="<%= dash_path %>">Dash</a>
+        <a href="<%= cal_path %>">Cal</a>
+        <a href="<%= growth_path %>">Growth</a>
+
+        <% if user_signed_in? %>
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        <% else %>
+            <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %>
+            <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+        <% end %>
+    </div>
 
     <%= yield %>
 
